2004-12-06  Raja R Harinath  <rharinath@novell.com>

	* Makefile (lib_file): New autodetecting define.
	(USE_BOOT_COMPILE, LIBRARY_COMPILE): Add support for using
	bootstrap compiler.
	(BUILT_SOURCES): Add ...XPath/Parser.cs.
	(EXTRA_DISTFILES): Add ...Query/XQueryParser.jay.
	(BOOTSTRAP_MCS) [PROFILE=net_2_0]: New.
	* System.Xml.dll.sources: Remove ...XPath/Parser.cs.

2004-12-04  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Xml.dll.sources : added DTMXPathDocument2.cs,
	  DTMXPathDocumentBuilder2.cs, DTMXPathDocumentWriter2.cs,
	  DTMXPathDocumentWriter2.cs and DTMXPathNode2.cs.

2004-12-03  Raja R Harinath  <rharinath@novell.com>

	* Makefile: Remove support for being in bootstrap build.

2004-12-01  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Xml.dll.sources: removed old IXPathChangeNavigable.cs,
	  XmlChangeFilters.cs, and XPathDocumentNodeChangedAction.cs.

2004-11-25  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : added LIBRARY_COMPILE condition for upcoming need to
	  be referenced in bootstrap.

2004-11-22  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Xml.dll.sources : added XmlSchemaInfo.cs.

2004-11-17  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Xml.dll.sources : Moved XQueryConvert.cs from
	  System.Xml.Query to System.Xml.

2004-11-17  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Xml.dll.sources : added XmlSchemaInference.cs,
	  XmlSchemaInferenceException.cs and XmlSchemaValidationException.cs.

2004-11-08  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Xml.dll.sources :
	  added XmlTextReader2.cs.
	  removed IXPathEditable.cs, XPathEditableNavigator.cs,
	  NodeChangedEventArgs.cs and NodeChangedEventHandler.cs.

2004-10-29  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : just ignore obsolete attribute warnings (those obsolete
	  members are widely used in obsolete code).

2004-10-28  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Xml.dll.sources : removed IXmlDataEvidence, fixed