@@ -1,3 +1,10 @@
+2004-12-08  Atsushi Enomoto <atsushi@ximian.com>
+
+	* XmlValueGetter.cs,
+	  XmlSchemaValidationFlags.cs,
+	  XmlSchemaValidator.cs : added.
+	* XmlSchemaSet.cs : XmlResolver is now internally gettable.
+
 2004-12-04  Atsushi Enomoto <atsushi@ximian.com>
 
 	* XmlSchemaObject.cs : added Parent.
